[gd_scene load_steps=13 format=3 uid="uid://cmhex3ujc26eh"]

[ext_resource type="Script" path="res://Arena.gd" id="1_kwk16"]
[ext_resource type="PackedScene" uid="uid://cmx8p1tkc4vc8" path="res://Enemy_1.tscn" id="2_533e6"]
[ext_resource type="PackedScene" uid="uid://cj44kymh3qet2" path="res://Player.tscn" id="2_rx8il"]
[ext_resource type="PackedScene" uid="uid://b4lexe37m6pl6" path="res://enemy_2.tscn" id="3_1o1lx"]
[ext_resource type="FontFile" uid="uid://d1ah0c37nhuvx" path="res://assets/Font.ttf" id="3_c8ko4"]
[ext_resource type="Script" path="res://Score.gd" id="4_0ny0l"]
[ext_resource type="PackedScene" uid="uid://chd8nebpfp2ny" path="res://Power_up_reload.tscn" id="4_b5th8"]
[ext_resource type="PackedScene" uid="uid://c1ev0e4ip0tpk" path="res://Power_up_damage.tscn" id="5_h8h6p"]
[ext_resource type="Script" path="res://Highscore.gd" id="5_iwtfm"]
[ext_resource type="Script" path="res://Camera_2d.gd" id="5_vyab4"]
[ext_resource type="PackedScene" uid="uid://bxx1t3lrt6xfq" path="res://Background.tscn" id="11_y1u55"]

[sub_resource type="Environment" id="Environment_x1puq"]
glow_enabled = true
glow_bloom = 0.15
fog_enabled = true

[node name="Arena" type="Node2D"]
script = ExtResource("1_kwk16")
enemies = Array[PackedScene]([ExtResource("2_533e6"), ExtResource("3_1o1lx")])
power_ups = Array[PackedScene]([ExtResource("4_b5th8"), ExtResource("5_h8h6p")])

[node name="Background" parent="." instance=ExtResource("11_y1u55")]

[node name="Player" parent="." instance=ExtResource("2_rx8il")]
position = Vector2(320, 180)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_x1puq")

[node name="Enemy_spawn_timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Difficulty_timer" type="Timer" parent="."]

[node name="Power_up_spawn_timer" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[node name="UI" type="Node2D" parent="."]
z_index = 20

[node name="Control" type="Control" parent="UI"]
custom_minimum_size = Vector2(640, 360)
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 360.0

[node name="Score" type="Label" parent="UI/Control"]
layout_mode = 0
offset_left = -4.435
offset_right = 1275.56
offset_bottom = 145.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("3_c8ko4")
theme_override_font_sizes/font_size = 128
text = "100"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("4_0ny0l")

[node name="Highscore" type="Label" parent="UI/Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -44.0
offset_right = 1280.0
offset_bottom = 47.0
grow_vertical = 0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("3_c8ko4")
theme_override_font_sizes/font_size = 64
text = "100"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("5_iwtfm")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(320, 180)
script = ExtResource("5_vyab4")

[node name="Screen_shake_time" type="Timer" parent="Camera2D"]
one_shot = true

[connection signal="timeout" from="Enemy_spawn_timer" to="." method="_on_enemy_spawn_timer_timeout"]
[connection signal="timeout" from="Difficulty_timer" to="." method="_on_difficulty_timer_timeout"]
[connection signal="timeout" from="Power_up_spawn_timer" to="." method="_on_power_up_spawn_timer_timeout"]
[connection signal="timeout" from="Camera2D/Screen_shake_time" to="Camera2D" method="_on_screen_shake_time_timeout"]
